--- a/sass/partials/_order-summary.scss
+++ b/sass/partials/_order-summary.scss
@@ -72,7 +72,6 @@
 	text-align: right;
 	line-height: 1;
 	vertical-align: middle;
-	white-space: nowrap;
 }
 
 .wfc-wrapper .woocommerce-checkout-review-order-table .product-total .tax_label,
